# ma_crypt

./: .gitignore  CMakeLists.txt  README.md
cmake/: findnettle.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/: ma_crypt.h  ma_crypt_internal.h  ma_hash.h
src/: ma_crypt.c  ma_hash.c
test/: CBC.txt  CMakeLists.txt  CTR.txt  ECB.txt  GCM.txt  cbc.c  crypt.c  cryptutils.c  ctr.c  ecb.c  gcm.c  hash.c
test/tap/: CMakeLists.txt
