PROJECT(ma_crypt)
cmake_minimum_required(VERSION 3.5)

IF(NOT WITH_CRYPTO)
  IF(WIN32)
    SET(WITH_CRYPTO "schannel")
  ELSE()
    SET(WITH_CRYPTO "openssl")
  ENDIF()
ENDIF()

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)
SET(VERSION_PATCH 0)

IF(WITH_DOCS)
  ADD_SUBDIRECTORY(doc)
ENDIF()

IF(WITH_CRYPTO)
  STRING(TOLOWER ${WITH_CRYPTO} WITH_CRYPTO)
  IF(WITH_CRYPTO STREQUAL "openssl")
    FIND_PACKAGE(OpenSSL)
    IF(OPENSSL_FOUND)
      ADD_DEFINITIONS(-DHAVE_OPENSSL)
      SET(CRYPTO_LIBRARIES ${OPENSSL_LIBRARIES} ${OPENSSL_CRYPTO_LIBRARIES})
      MESSAGE(STATUS "LIBS: ${CRYPTO_LIBRARIES}")
      INCLUDE_DIRECTORIES(BEFORE ${OPENSSL_INCLUDE_DIR})
      MESSAGE(STATUS "OpenSSL version: ${OPENSSL_VERSION}")
    ENDIF()
  ELSEIF(WITH_CRYPTO STREQUAL "nettle")
    INCLUDE(${PROJECT_SOURCE_DIR}/cmake/findnettle.cmake)
    IF(NETTLE_FOUND)
      ADD_DEFINITIONS(-DHAVE_NETTLE)
      INCLUDE_DIRECTORIES(BEFORE ${NETLLE_INCLUDE_DIRS})
      SET(CRYPTO_LIBRARIES ${NETTLE_LIBRARIES} -lnettle)
    ELSE()
      MESSAGE(FATAL "GnuTLS not found")
    ENDIF()
  ELSEIF(WITH_CRYPTO STREQUAL "schannel")
    ADD_DEFINITIONS(-DHAVE_SCHANNEL)
  ENDIF()
ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_LIBRARY(ma_hash SHARED ${PROJECT_SOURCE_DIR}/src/ma_hash.c src/ma_crypt.c)
TARGET_LINK_LIBRARIES(ma_hash PUBLIC ${CRYPTO_LIBRARIES})

ADD_SUBDIRECTORY(test)
