SET(TESTS hash ecb cbc gcm ctr)

ENABLE_TESTING()

ADD_SUBDIRECTORY(tap)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/test/tap)

FOREACH(TEST ${TESTS})
  ADD_EXECUTABLE(${TEST} ${TEST}.c cryptutils.c)
  TARGET_LINK_LIBRARIES(${TEST} ma_crypt tap)
  ADD_TEST(${TEST} ${EXECUTABLE_OUTPUT_PATH}/${TEST})
  SET_TESTS_PROPERTIES(${TEST} PROPERTIES TIMEOUT 120)
ENDFOREACH()
